# pdf2reader

./: DEV_DOCS.md  README.md  pyproject.toml  requirements.txt
src/pdf2reader/: __main__.py  data_structures.py  images_optimization.py  main_gui.py  navigation_bar.py  pdf_display.py  pdf_file.py
src/pdf2reader/gui/: crop_selector.py  debouncer.py  image_optimization_window.py  main_gui.py  navigation_bar.py  page_edit_window.py  page_renderer.py  pdf_display.py  pdf_page_grid_display.py  progress_bar_window.py  select_pages_to_action_window.py  tooltip.py  vertical_scrolled_frame.py
