[tool.poetry]
name = "pdf2reader"
version = "0.1.0"
description = "A small app to convert PDFs to be more readable on ebook readers."
authors = ["Patrik Vacal <patrik+pdf2reader@vacal.dev>"]
readme = "README.md"
repository = "https://github.com/gamecraftCZ/pdf2reader"

[tool.poetry.dependencies]
    python = "^3.7"
    pikepdf = "*"
    pymupdf = "*"
    numpy = "*"
    img2pdf = "*"
    ocrmypdf = "*"

[tool.poetry.scripts]
    pdf2reader = "pdf2reader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
